<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:src="@drawable/box"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/imageView5"
        android:layout_centerHorizontal="true"
        android:background="@drawable/white_background"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/tv50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv50" />

            <EditText
                android:id="@+id/et50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="10"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/tv51"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:text="@string/tv51" />

            <EditText
                android:id="@+id/et51"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:maxLength="16"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv70"
        android:background="@color/background"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:layout_above="@+id/tv80"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tv80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/tv80"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/bt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt2"
        android:background="@drawable/green_background"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
